# athame

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
athame/: __init__.py  ast.py  exceptions.py  lexer.py  parser.py  trie.py
tests/: test___init__.py  test_ast.py  test_lexer.py  test_parser.py  test_trie.py  tools.py
